Creato con Colaboratory

--- a/riepilogoliste.ipynb
+++ b/riepilogoliste.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaSaHchB74gJUUXJ5Cpiio",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +24,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/VittorioMilella/Documentazione/blob/main/riepilogoliste.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "GZC_tIj4CTh7"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -99,7 +89,7 @@
       "metadata": {
         "id": "VVKXSX8EF24I"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +111,7 @@
       "metadata": {
         "id": "yp-HyLqOF_IA"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +135,7 @@
         "id": "xlNpOpK-GiNw",
         "outputId": "3610e79b-e6c8-444a-a6d6-b777625a31c5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +165,7 @@
       "metadata": {
         "id": "aJsyNuCNHJjY"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +187,7 @@
       "metadata": {
         "id": "Kf1j37bzHlcw"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +217,7 @@
         "id": "6SP-Pq3cIWaZ",
         "outputId": "e0a5cb2a-c77e-4b46-acab-9d24fe74177c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,6 +233,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista.index(10) #restituisce l'indice in cui si trova la prima occorrenza dell'elemento 10"
+      ],
+      "metadata": {
+        "id": "kjbG-nwZSish"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -266,7 +267,7 @@
         "id": "KlNvEN3xIm5H",
         "outputId": "859877d9-23ad-4000-b88b-f0f3993f95b8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -326,7 +327,7 @@
         "id": "EtOJ19m4K3O3",
         "outputId": "6a348c86-746c-439c-874f-19cc83b5c442"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
